--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.395.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.1",
     "react-icons": "^5.2.1",
+    "react-to-print": "^2.15.1",
     "socket.io": "^4.5.4",
     "zustand": "^4.5.2"
   },
